tests/ui/errors/snapshots/infer_ordered_bound_rejects_bool.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Bound not satisfied
   ╭─[test.lis:7:20]
 6 │ fn test() {
 7 │   requires_ordered(true)
   ·                    ──┬─
   ·                      ╰── does not satisfy `cmp.Ordered`
 8 │ }
   ╰────
  help: The type parameter must be `cmp.Ordered` but the argument is not orderable. Relax the bound or pass an argument that satisfies it · code: [infer.not_orderable_bound]
