tests/ui/errors/snapshots/infer_package_name_as_bare_expression.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot use a package namespace as a value
   ╭─[test.lis:5:3]
 4 │ fn main() {
 5 │   fmt
   ·   ─┬─
   ·    ╰── package namespaces are not runtime values
 6 │ }
   ╰────
  help: Access a member instead, e.g. `fmt.Member` · code: [infer.package_namespace_used_as_value]
