tests/ui/errors/snapshots/infer_param_not_mutable.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Immutable variable
   ╭─[test.lis:3:3]
 2 │ fn test(count: int) {
 3 │   count = 20;
   ·   ─────┬────
   ·        ╰── `count` was declared without `mut`
 4 │ }
   ╰────
  help: Parameters are immutable. Rebind with `let mut count = count` to mutate a local copy · code: [infer.immutable]
