tests/ui/errors/snapshots/infer_param_not_mutable_for_map_delete.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing write permission
   ╭─[test.lis:3:3]
 2 │ fn test(scores: Map<string, int>) {
 3 │   scores.delete("a")
   ·   ──────┬──────
   ·         ╰── expected `mut Map<string, int>`, found `Map<string, int>`
 4 │ }
   ╰────
  help: `mut Map<string, int>` permits writes, `Map<string, int>` does not. Make the value writable where it is created, or pass a `.clone()` · code: [infer.needs_writable]
