tests/ui/errors/snapshots/infer_param_not_mutable_for_ref_receiver_method.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Immutable variable
    ╭─[test.lis:11:3]
 10 │ fn test(counter: Counter) {
 11 │   counter.increment()
    ·   ────────┬────────
    ·           ╰── `counter` was declared without `mut`
 12 │ }
    ╰────
  help: Parameters are immutable. Rebind with `let mut counter = counter` to mutate a local copy · code: [infer.immutable]
