tests/ui/errors/snapshots/infer_parenthesized_module_qualifier.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Unnecessary parentheses around qualifier
   ╭─[main.lis:5:11]
 4 │ fn main() {
 5 │   let n = (util).one()
   ·           ───┬──
   ·              ╰── parenthesized qualifier
 6 │   let _ = n
   ╰────
  help: Remove the parentheses: `util.one` · code: [infer.parenthesized_qualifier]
